<resources>
    <string name="app_name">Sandy Springs Conservancy</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_park_list">Park List</string>
    <string name="menu_park_map">Park Map</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_amenity_search">Amenity Search</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_contact">Contact &amp; Support</string>
    <string name="menu_parks">Parks</string>

    <string name="label_phone">Phone: </string>
    <string name="label_map">Map:</string>
    <string name="label_amenity_search">Tap desired amenities:</string>

    <string name="search_parks">Search parks…</string>
    <string name="search">Search</string>
    <string name="list_empty">No parks matched in search.</string>
    <string name="park_distance_miles">%.1f miles away</string>

    <string name="park_list_download_start">Downloading Park List…</string>
    <string name="park_list_download_fail">Download Failed.</string>

    <string name="gps_perm_title">Location Services</string>
    <string name="gps_perm_text">Would you like to enable location services? This will allow for us to determine which parks are near you.</string>
    <string name="gps_perm_confirm">Allow</string>
</resources>