<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aidancbrady.sandyspringsconservancy.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.aidancbrady.sandyspringsconservancy.ui.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_park_map"
        android:name="com.aidancbrady.sandyspringsconservancy.ui.MapFragment"
        android:label="@string/menu_park_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_park_list"
        android:name="com.aidancbrady.sandyspringsconservancy.ui.ParkListFragment"
        android:label="@string/menu_park_list"
        tools:layout="@layout/fragment_park_list" />

    <fragment
        android:id="@+id/nav_amenity_search"
        android:name="com.aidancbrady.sandyspringsconservancy.ui.AmenitySearchFragment"
        android:label="@string/menu_amenity_search"
        tools:layout="@layout/fragment_amenity_search" />

    <fragment
        android:id="@+id/nav_park"
        android:name="com.aidancbrady.sandyspringsconservancy.ui.ParkFragment"
        android:label="@string/menu_park_list"
        tools:layout="@layout/fragment_park" />
</navigation>